fix stillHaveQuestions layout problems

--- a/src/assets/css/general-style.css
+++ b/src/assets/css/general-style.css
@@ -375,3 +375,13 @@ label {
 .mb8 { margin-bottom: 8px !important; }
 .mb1em { margin-bottom: 1em !important; }
 .mb2em { margin-bottom: 2em !important; }
+.mb3em { margin-bottom: 3em !important; }
+.mb4em { margin-bottom: 4em !important; }
+
+.mt0 { margin-top: 0 !important; }
+.mt4 { margin-top: 4px !important; }
+.mt8 { margin-top: 8px !important; }
+.mt1em { margin-top: 1em !important; }
+.mt2em { margin-top: 2em !important; }
+.mt3em { margin-top: 3em !important; }
+.mt4em { margin-top: 4em !important; }
